thunder链接转换及基本文件下载
